// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - BackEndRolePage renders correctly for /backend path 1`] = `
.c0 {
  padding: 2rem;
}

<section
  className="c0"
>
  <Robot
    mood="confused"
  />
</section>
`;

exports[`COMPONENT - BackEndRolePage renders correctly for /backend/brag path 1`] = `
.c0 {
  padding: 2rem;
}

<section
  className="c0"
>
  <Robot
    mood="confident"
  />
</section>
`;

exports[`COMPONENT - BackEndRolePage renders correctly for /backend/confess path 1`] = `
.c0 {
  padding: 2rem;
}

<section
  className="c0"
>
  <Robot
    mood="sad"
  />
</section>
`;
